--- a/pos/imports/ui/pages/invoice.html
+++ b/pos/imports/ui/pages/invoice.html
@@ -77,73 +77,107 @@
                 </div>
             </div>
             <div class="row well">
-                <div class="col-md-12 ">
-                    <div class="row">
-                        <div class="col-md-3">
-                            <input type="text" class="form-control" id="item-barcode" placeholder="Barcode">
+                <div>
+                    <div class="col-md-12 ">
+                        <div class="row">
+                            <div class="col-md-3">
+                                <input type="text" class="form-control" id="item-barcode" placeholder="Barcode">
+                            </div>
+                            <div class="col-md-4">
+                                <select class="form-control" id="item-id">
+                                    <option value="">(Select Item)</option>
+                                    {{#each itemList}}
+                                        <option value="{{_id}}">{{name}} ({{_unit.name}})</option>
+                                    {{/each}}
+                                </select>
+                            </div>
+                            <div class="col-md-3">
+                                <input type="text" class="form-control" id="item-qty" placeholder="Qty">
+                            </div>
+                            <div class="col-md-2">
+                                {{> afQuickField name="isWholesale" label=false}}
+                            </div>
+
                         </div>
-                        <div class="col-md-4">
-                            <select class="form-control" id="item-id">
-                                <option value="">(Select Item)</option>
-                                {{#each itemList}}
-                                    <option value="{{_id}}">{{name}} ({{_unit.name}})</option>
-                                {{/each}}
-                            </select>
-                        </div>
-                        <div class="col-md-3">
-                            <input type="text" class="form-control" id="item-qty" placeholder="Qty">
-                        </div>
-                        <div class="col-md-2">
-                            {{> afQuickField name="isWholesale" label=false}}
-                        </div>
+                        <!--Item Temporary-->
+                        <!--{{> Pos_invoiceItems itemsCollection=itemsCollection}}-->
+                        <br>
+                        <table class="table table-striped">
+                            <thead>
+                            <tr>
+                                <th><b>Item</b></th>
+                                <th><b>itemId</b></th>
+                                <th><b>Unit</b></th>
+                                <th><b>Price</b></th>
+                                <th><b>Qty</b></th>
+                                <th><b>Dis</b></th>
+                                <th><b>Amount</b></th>
+                                <th style="text-align: right"><b>Action</b></th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            {{#each items}}
+                                <tr>
+                                    <td>{{itemId}}</td>
+                                    <td>{{name}}</td>
+                                    <td>({{unit}})</td>
+                                    <td><input type="number" value={{price}} class="item-price"></td>
+                                    <td><input type="number" value={{qty}} class="item-qty"></td>
+                                    <td><input type="number" value={{discount}} class="item-discount"></td>
+                                    <td style="text-align: right">{{amount}} {{baseCurrency.symbol}}</td>
+                                    <td style="text-align: right">
+                                        <div class="btn-group btn-group-xs" role="group" aria-label="...">
+                                            <button type="button" class="btn btn-warning item-imei">IMEI</button>
+                                            <button type="button" class="btn btn-danger item-remove">
+                                                <i class="fa fa-trash" aria-hidden="true"></i>
+                                            </button>
+                                        </div>
+                                    </td>
+                                </tr>
+                            {{/each}}
+                            </tbody>
+                        </table>
 
                     </div>
-                    <!--Item Temporary-->
-                    <!--{{> Pos_invoiceItems itemsCollection=itemsCollection}}-->
-                    <br>
-                    <table class="table table-striped">
-                        <thead>
-                        <tr>
-                            <th><b>Item</b></th>
-                            <th><b>itemId</b></th>
-                            <th><b>Unit</b></th>
-                            <th><b>Price</b></th>
-                            <th><b>Qty</b></th>
-                            <th><b>Dis</b></th>
-                            <th><b>Amount</b></th>
-                            <th><b>Action</b></th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        {{#each items}}
-                            <tr>
-                                <td>{{itemId}}</td>
-                                <td>{{name}}</td>
-                                <td>({{unit}})</td>
-                                <td><input type="number" value={{price}} class="item-price"></td>
-                                <td><input type="number" value={{qty}} class="item-qty"></td>
-                                <td><input type="number" value={{discount}} class="item-discount"></td>
-                                <td>{{amount}}</td>
-                                <td>
-                                    <div class="btn-group btn-group-xs" role="group" aria-label="...">
-                                        <button type="button" class="btn btn-warning item-imei">IMEI</button>
-                                        <button type="button" class="btn btn-danger item-remove"><i class="fa fa-trash"
-                                                                                                    aria-hidden="true"></i>
-                                        </button>
-                                    </div>
-                                </td>
-                            </tr>
-                        {{/each}}
-                        </tbody>
-                    </table>
+                </div>
+                <div class="row">
+                    <!-- {{> afQuickField name="subTotal" value=subTotal readonly=true}}-->
+                    <div class="col-md-8"><b class="pull-right">SubTotal:</b></div>
                     <div class="col-md-4">
-                        {{> afQuickField name="subTotal" value=subTotal readonly=true}}
+                        <div class="input-group">
+                            <span class="input-group-addon">{{baseCurrency.symbol}}</span>
+                            {{> afFieldInput name="subTotal" value=subTotal readonly=true}}
+                        </div>
                     </div>
+                </div>
+                <div class="row">
+                    <!-- {{> afQuickField name="discount" value=totalDiscount}}-->
+                    <div class="col-md-8"><b class="pull-right">Discount:</b></div>
                     <div class="col-md-4">
-                        {{> afQuickField name="discount" value=totalDiscount}}
+                        <div class="input-group">
+                            <span class="input-group-addon">%</span>
+                            {{> afFieldInput name="discount" value=totalDiscount}}
+                        </div>
                     </div>
+                </div>
+                <div class="row">
+                    <!-- {{> afQuickField name="total" value=total readyonly=true}}-->
+                    <div class="col-md-8"><b class="pull-right">Total:</b></div>
                     <div class="col-md-4">
-                        {{> afQuickField name="total" value=total readyonly=true}}
+                        <div class="input-group">
+                            <span class="input-group-addon">{{baseCurrency.symbol}}</span>
+                            {{> afFieldInput name="total" value=total readonly=true}}
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <!-- {{> afQuickField name="total" value=total readyonly=true}}-->
+                    <div class="col-md-8"><b class="pull-right">Pay:</b></div>
+                    <div class="col-md-4">
+                        <div class="input-group">
+                            <span class="input-group-addon">{{baseCurrency.symbol}}</span>
+                            {{> afFieldInput name="paid"}}
+                        </div>
                     </div>
                 </div>
             </div>
