update invoice and enter bill

--- a/pos/imports/ui/pages/invoice.html
+++ b/pos/imports/ui/pages/invoice.html
@@ -242,9 +242,11 @@
     <div class="box-body">
         {{#autoForm collection=collection id="Pos_invoiceUpdate" doc=data type="update"}}
             <div class="row">
-                <div class="col-md-10">
+                <div class="col-md-3">
                     <div class="row">
-                        <div class="col-md-4 ">
+                        <div class="col-md-12">
+                            <b style="font-size: 18px;">Invoice Info</b>
+                            {{> afQuickField name="isWholesale" label=false}}
                             <div class="input-group">
                                 <label for="email" class="input-group">Customer:<span
                                         style="color: red;">*</span></label>
@@ -252,172 +254,156 @@
                                 <br>
                                 {{>customerDropDown}}
                             </div>
-                        </div>
-                        <!-- <div class="col-md-3">
-                             <br>
-                             <span><input type="checkbox" class="filled-in enable-sale-order"><a href=""
-                                                                                                 class="sale-order btn btn-default">Sale
-                                Order <i class="fa fa-list " aria-hidden="true"></i></a></span>
-                         </div>-->
-                        <div class="col-md-4">
+                            <!-- <div class="col-md-3">
+                                 <br>
+                                 <span><input type="checkbox" class="filled-in enable-sale-order"><a href=""
+                                                                                                     class="sale-order btn btn-default">Sale
+                                    Order <i class="fa fa-list " aria-hidden="true"></i></a></span>
+                             </div>-->
                             {{> afQuickField name="voucherId"}}
+                            {{> afQuickField name="invoiceDate"}}
+                            {{> afQuickField name="stockLocationId" value=stockLocation resetOnSuccess=false}}
+                            <!--{{> afQuickField type="hidden" name="branchId" value=currentBranch}}-->
+                            {{> afQuickField name="repId" options=options value=repId label="Rep"}}
+                            {{> afQuickField name="dueDate" value=dueDate}}
+                            {{#if isTerm}}
+                                {{> afQuickField name="termId" options=termOption value=termId}}
+                            {{/if}}
+                            {{> afQuickField name="des" rows="5"}}
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-9">
+                    <div class="row">
+                        <div class="col-md-4">
+                            <input type="text" class="form-control" id="item-barcode" placeholder="Barcode">
                         </div>
                         <div class="col-md-4">
-                            {{> afQuickField name="invoiceDate"}}
+                            <select class="form-control" id="item-id">
+                                <option value="">(Select Item)</option>
+                                {{#each itemList}}
+                                    <option value="{{_id}}">{{name}} ({{_unit.name}})</option>
+                                {{/each}}
+                            </select>
                         </div>
-
+                        <div class="col-md-4">
+                            <input type="text" class="form-control" id="item-qty" placeholder="Qty">
+                        </div>
                     </div>
-
                     <div class="row">
+                        <div class="col-md-12 ">
 
-                        <div class="col-md-3">
-                            {{> afQuickField name="stockLocationId" value=stockLocation resetOnSuccess=false}}
-                            {{> afQuickField type="hidden" name="branchId" value=currentBranch}}
-                        </div>
-                        <div class="col-md-3">
-                            {{> afQuickField name="repId" options=options value=repId label="Rep"}}
-                        </div>
-                        <div class="col-md-3">
-                            {{> afQuickField name="dueDate" value=dueDate}}
-                        </div>
-                        {{#if isTerm}}
-                            <div class="col-md-3">
-                                {{> afQuickField name="termId" options=termOption value=termId}}
-                            </div>
-                        {{/if}}
-                    </div>
-                </div>
-                <div class="col-md-2">
-                    {{> afQuickField name="des" rows="5"}}
-                </div>
-            </div>
-            <div class="row well">
-                <div>
-                    <div class="col-md-12 ">
-                        <div class="row">
-                            <div class="col-md-3">
-                                <input type="text" class="form-control" id="item-barcode" placeholder="Barcode">
-                            </div>
-                            <div class="col-md-4">
-                                <select class="form-control" id="item-id">
-                                    <option value="">(Select Item)</option>
-                                    {{#each itemList}}
-                                        <option value="{{_id}}">{{name}} ({{_unit.name}})</option>
-                                    {{/each}}
-                                </select>
-                            </div>
-                            <div class="col-md-3">
-                                <input type="text" class="form-control" id="item-qty" placeholder="Qty">
-                            </div>
-                            <div class="col-md-2">
-                                {{> afQuickField name="isWholesale" label=false}}
-                            </div>
-
-                        </div>
-                        <!--Item Temporary-->
-                        <!--{{> Pos_invoiceItems itemsCollection=itemsCollection}}-->
-                        <br>
-                        <table class="table table-striped">
-                            <thead>
-                            <tr>
-                                <th><b>Item</b></th>
-                                <th><b>itemId</b></th>
-                                <th><b>Unit</b></th>
-                                <th><b>Price</b></th>
-                                <th><b>Qty</b></th>
-                                <th><b>Dis</b></th>
-                                <th><b>Amount</b></th>
-                                <th style="text-align: right"><b>Action</b></th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                            {{#each items}}
+                            <!--Item Temporary-->
+                            <!--{{> Pos_invoiceItems itemsCollection=itemsCollection}}-->
+                            <br>
+                            <table class="table table-striped">
+                                <thead>
                                 <tr>
-                                    <td>{{itemId}}</td>
-                                    <td>{{name}}</td>
-                                    <td>({{unit}})</td>
-                                    <td><input type="number" value={{price}} class="item-price"></td>
-                                    <td><input type="number" value={{qty}} class="item-qty"></td>
-                                    <td><input type="number" value={{discount}} class="item-discount"></td>
-                                    <td style="text-align: right">{{amount}} {{baseCurrency.symbol}}</td>
-                                    <td style="text-align: right">
-                                        <div class="btn-group btn-group-xs" role="group" aria-label="...">
-                                            <button type="button" class="btn btn-warning item-imei">IMEI</button>
-                                            <button type="button" class="btn btn-danger item-remove">
-                                                <i class="fa fa-trash" aria-hidden="true"></i>
-                                            </button>
-                                        </div>
-                                    </td>
+                                    <th><b>Item</b></th>
+                                    <th><b>itemId</b></th>
+                                    <th><b>Unit</b></th>
+                                    <th><b>Price</b></th>
+                                    <th><b>Qty</b></th>
+                                    <th><b>Dis</b></th>
+                                    <th><b>Amount</b></th>
+                                    <th style="text-align: right"><b>Action</b></th>
                                 </tr>
-                            {{/each}}
-                            </tbody>
-                        </table>
+                                </thead>
+                                <tbody>
+                                {{#each items}}
+                                    <tr>
+                                        <td>{{itemId}}</td>
+                                        <td>{{name}}</td>
+                                        <td>({{unit}})</td>
+                                        <td><input type="number" value={{price}} class="item-price"></td>
+                                        <td><input type="number" value={{qty}} class="item-qty"></td>
+                                        <td><input type="number" value={{discount}} class="item-discount"></td>
+                                        <td style="text-align: right">{{amount}} {{baseCurrency.symbol}}</td>
+                                        <td style="text-align: right">
+                                            <div class="btn-group btn-group-xs" role="group" aria-label="...">
+                                                <button type="button" class="btn btn-warning item-imei">IMEI</button>
+                                                <button type="button" class="btn btn-danger item-remove">
+                                                    <i class="fa fa-trash" aria-hidden="true"></i>
+                                                </button>
+                                            </div>
+                                        </td>
+                                    </tr>
+                                {{/each}}
+                                </tbody>
+                            </table>
 
-                    </div>
-                </div>
-                <div class="row">
-                    <!-- {{> afQuickField name="subTotal" value=subTotal readonly=true}}-->
-                    <div class="col-md-8"><b class="pull-right">SubTotal:</b></div>
-                    <div class="col-md-4">
-                        <div class="input-group">
-                            <span class="input-group-addon">{{baseCurrency.symbol}}</span>
-                            {{> afFieldInput name="subTotal" value=subTotal readonly=true}}
                         </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <!-- {{> afQuickField name="discount" value=totalDiscount}}-->
-                    <div class="col-md-8"><b class="pull-right">Discount:</b></div>
-                    <div class="col-md-4">
-                        <div class="input-group">
-                            <span class="input-group-addon">%</span>
-                            {{> afFieldInput name="discount" value=totalDiscount}}
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <!-- {{> afQuickField name="total" value=total readyonly=true}}-->
-                    <div class="col-md-8"><b class="pull-right">Total:</b></div>
-                    <div class="col-md-4">
-                        <div class="input-group">
-                            <span class="input-group-addon">{{baseCurrency.symbol}}</span>
-                            {{> afFieldInput name="total" value=total readonly=true}}
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <!-- {{> afQuickField name="total" value=total readyonly=true}}-->
-                    <div class="col-md-8"><b class="pull-right">Pay:</b></div>
-                    <div class="col-md-4">
-                        <div class="input-group">
-                            <span class="input-group-addon">{{baseCurrency.symbol}}</span>
-                            {{> afFieldInput name="paid"}}
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-12 pull-right">
-                    <!--{{> formFooterWithButton}}-->
-                    {{#formFooter}}
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="row">
 
-                        <button type="submit" class="btn btn-success" id="btn-pay-print" {{disabledSubmitBtn}}>
-                            <i class="fa fa-print"></i> {{_ "pos.custom.payAndPrint"}}
-                        </button>
-                        <button type="submit" class="btn btn-warning" id="btn-save-print" {{disabledSubmitBtn}}>
-                            <i class="fa fa-print"></i> {{_ "pos.custom.saveAndPrint"}}
-                        </button>
-                        <button type="submit" class="btn btn-success" id="btn-pay" {{disabledSubmitBtn}}>
-                            <i class="fa fa-money"></i> {{_ "pos.custom.pay"}}
-                        </button>
-                        <button type="submit" class="btn btn-primary save-invoice" {{disabledSubmitBtn}}>
-                            <i class="fa fa-floppy-o"></i> {{_ "form.btnSave"}}
-                        </button>
-                        <button type="reset" class="btn btn-default reset-button">
-                            <i class="fa fa-refresh"></i> {{_ "form.btnReset"}}
-                        </button>
-                    {{/formFooter}}
+                                    <!-- {{> afQuickField name="subTotal" value=subTotal readonly=true}}-->
+                                    <div class="col-md-8"><b class="pull-right">SubTotal:</b></div>
+                                    <div class="col-md-4">
+                                        <div class="input-group">
+                                            <span class="input-group-addon">{{baseCurrency.symbol}}</span>
+                                            {{> afFieldInput name="subTotal" value=subTotal readonly=true}}
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <!-- {{> afQuickField name="discount" value=totalDiscount}}-->
+                                    <div class="col-md-8"><b class="pull-right">Discount:</b></div>
+                                    <div class="col-md-4">
+                                        <div class="input-group">
+                                            <span class="input-group-addon">%</span>
+                                            {{> afFieldInput name="discount" value=totalDiscount}}
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <!-- {{> afQuickField name="total" value=total readyonly=true}}-->
+                                    <div class="col-md-8"><b class="pull-right">Total:</b></div>
+                                    <div class="col-md-4">
+                                        <div class="input-group">
+                                            <span class="input-group-addon">{{baseCurrency.symbol}}</span>
+                                            {{> afFieldInput name="total" value=total readonly=true}}
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <!-- {{> afQuickField name="total" value=total readyonly=true}}-->
+                                    <div class="col-md-8"><b class="pull-right">Pay:</b></div>
+                                    <div class="col-md-4">
+                                        <div class="input-group">
+                                            <span class="input-group-addon">{{baseCurrency.symbol}}</span>
+                                            {{> afFieldInput name="paid"}}
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <!--{{> formFooterWithButton}}-->
+                            {{#formFooter}}
+
+                                <button type="submit" class="btn btn-success" id="btn-pay-print" {{disabledSubmitBtn}}>
+                                    <i class="fa fa-print"></i> {{_ "pos.custom.payAndPrint"}}
+                                </button>
+                                <button type="submit" class="btn btn-warning" id="btn-save-print" {{disabledSubmitBtn}}>
+                                    <i class="fa fa-print"></i> {{_ "pos.custom.saveAndPrint"}}
+                                </button>
+                                <button type="submit" class="btn btn-success" id="btn-pay" {{disabledSubmitBtn}}>
+                                    <i class="fa fa-money"></i> {{_ "pos.custom.pay"}}
+                                </button>
+                                <button type="submit" class="btn btn-primary save-invoice" {{disabledSubmitBtn}}>
+                                    <i class="fa fa-floppy-o"></i> {{_ "form.btnSave"}}
+                                </button>
+                                <button type="reset" class="btn btn-default reset-button">
+                                    <i class="fa fa-refresh"></i> {{_ "form.btnReset"}}
+                                </button>
+                            {{/formFooter}}
+                        </div>
+                    </div>
                 </div>
+
             </div>
         {{/autoForm}}
     </div>
