--- a/pos/imports/ui/pages/enterBill.html
+++ b/pos/imports/ui/pages/enterBill.html
@@ -22,7 +22,7 @@
 </template>
 
 <!--Insert-->
-<template name="Pos_enterBillNew">
+<!--<template name="Pos_enterBillNew">
     <div class="box-body">
         {{#autoForm collection=collection id="Pos_enterBillNew" type="insert"}}
             <div class="row" style="background: rgb(227, 234, 243); padding: 10px; margin: 0;">
@@ -76,18 +76,18 @@
             </div>
             <div class="col-md-2">
                 {{> afQuickField name="stockLocationId"}}
-                <!--{{> afQuickField type="hidden" name="branchId" value=currentBranch}}-->
+                &lt;!&ndash;{{> afQuickField type="hidden" name="branchId" value=currentBranch}}&ndash;&gt;
             </div>
             <div class="col-md-2">
                 {{> afQuickField name="repId" options=options value=repId label="Rep"}}
             </div>
             {{> afQuickField type="hidden" name="branchId" value=currentBranch}}
             <div class="col-md-12">
-                <!--Item Temporary-->
+                &lt;!&ndash;Item Temporary&ndash;&gt;
                 {{> Pos_enterBillItems itemsCollection=itemsCollection}}
                 <div class="row">
                     <div class="col-sm-12 pull-right">
-                        <!--{{> formFooterWithButton}}-->
+                        &lt;!&ndash;{{> formFooterWithButton}}&ndash;&gt;
 
                         {{#formFooter}}
                             <button type="submit" class="btn btn-primary" id="btn-save" {{disabledSubmitBtn}}>
@@ -105,7 +105,223 @@
             </div>
         {{/autoForm}}
     </div>
+</template>-->
+
+
+<!--Insert-->
+<template name="Pos_enterBillNew">
+    <div class="box-body">
+        {{#autoForm collection=collection id="Pos_enterBillNew" type="insert"}}
+            <div class="row">
+                <div class="col-md-3">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <b style="font-size: 18px;">Bill Info</b>
+                            <div class="input-group">
+                                <label for="email" class="input-group">Vendor:<span style="color: red;">*</span></label>
+                                {{> afFieldInput name="vendorId" label=false}}
+                                <br>
+                                {{>vendorNewDropDown}}
+                            </div>
+                            <!-- <div class="col-md-3">
+                                 <br>
+                                 <span><input type="checkbox" class="filled-in enable-sale-order"><a href=""
+                                                                                                     class="sale-order btn btn-default">Sale
+                                    Order <i class="fa fa-list " aria-hidden="true"></i></a></span>
+                             </div>-->
+                            {{> afQuickField name="voucherId"}}
+                            {{> afQuickField name="enterBillDate"}}
+                            {{> afQuickField name="stockLocationId" value=stockLocation resetOnSuccess=false}}
+                            {{> afQuickField type="hidden" name="branchId" value=currentBranch}}
+                            {{> afQuickField name="repId" options=options value=repId label="Rep"}}
+                            {{> afQuickField name="dueDate" value=dueDate}}
+                            {{#if isTerm}}
+                                {{> afQuickField name="termId" options=termOption value=termId}}
+                            {{/if}}
+                            {{> afQuickField name="des" rows="5"}}
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-9">
+                    <div class="row">
+                        <div class="col-md-4">
+                            <input type="text" class="form-control" id="item-barcode" placeholder="Barcode">
+                        </div>
+                        <div class="col-md-4">
+                            <select class="form-control" id="item-id">
+                                <option value="">(Select Item)</option>
+                                {{#each itemList}}
+                                    <option value="{{_id}}">{{name}} ({{_unit.name}})</option>
+                                {{/each}}
+                            </select>
+                        </div>
+                        <div class="col-md-4">
+                            <input type="text" class="form-control" id="item-qty" placeholder="Qty">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12 ">
+
+                            <!--Item Temporary-->
+                            <!--{{> Pos_invoiceItems itemsCollection=itemsCollection}}-->
+                            <br>
+                            <table class="table table-striped">
+                                <thead>
+                                <tr>
+                                    <th><b>Item</b></th>
+                                    <th><b>itemId</b></th>
+                                    <th><b>Unit</b></th>
+                                    <th><b>Price</b></th>
+                                    <th><b>Qty</b></th>
+                                    <th><b>Dis</b></th>
+                                    <th><b>Amount</b></th>
+                                    <th style="text-align: right"><b>Action</b></th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                {{#each items}}
+                                    <tr>
+                                        <td>{{itemId}}</td>
+                                        <td>{{name}}</td>
+                                        <td>({{unit}})</td>
+                                        <td><input type="number" value={{price}} class="item-price"></td>
+                                        <td><input type="number" value={{qty}} class="item-qty"></td>
+                                        <td><input type="number" value={{discount}} class="item-discount"></td>
+                                        <td style="text-align: right">{{amount}} {{baseCurrency.symbol}}</td>
+                                        <td style="text-align: right">
+                                            <div class="btn-group btn-group-xs" role="group" aria-label="...">
+                                                <button type="button" class="btn btn-warning item-imei">IMEI</button>
+                                                <button type="button" class="btn btn-danger item-remove">
+                                                    <i class="fa fa-trash" aria-hidden="true"></i>
+                                                </button>
+                                            </div>
+                                        </td>
+                                    </tr>
+                                {{/each}}
+                                </tbody>
+                            </table>
+
+                        </div>
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="row">
+
+                                    <!-- {{> afQuickField name="subTotal" value=subTotal readonly=true}}-->
+                                    <div class="col-md-8"><b class="pull-right">SubTotal:</b></div>
+                                    <div class="col-md-4">
+                                        <div class="input-group">
+                                            <span class="input-group-addon">{{baseCurrency.symbol}}</span>
+                                            {{> afFieldInput name="subTotal" value=subTotal readonly=true}}
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <!-- {{> afQuickField name="discount" value=totalDiscount}}-->
+                                    <div class="col-md-8"><b class="pull-right">Discount:</b></div>
+                                    <div class="col-md-4">
+                                        <div class="input-group">
+                                            <span class="input-group-addon">%</span>
+                                            {{> afFieldInput name="discount" value=totalDiscount}}
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <!-- {{> afQuickField name="total" value=total readyonly=true}}-->
+                                    <div class="col-md-8"><b class="pull-right">Total:</b></div>
+                                    <div class="col-md-4">
+                                        <div class="input-group">
+                                            <span class="input-group-addon">{{baseCurrency.symbol}}</span>
+                                            {{> afFieldInput name="total" value=total readonly=true}}
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <!-- {{> afQuickField name="total" value=total readyonly=true}}-->
+                                    <div class="col-md-8"><b class="pull-right">Pay:</b></div>
+                                    <div class="col-md-4">
+                                        <div class="input-group">
+                                            <span class="input-group-addon">{{baseCurrency.symbol}}</span>
+                                            {{> afFieldInput name="paid"}}
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <!--{{> formFooterWithButton}}-->
+                            {{#formFooter}}
+
+                                <button type="submit" class="btn btn-success" id="btn-pay-print" {{disabledSubmitBtn}}>
+                                    <i class="fa fa-print"></i> {{_ "pos.custom.payAndPrint"}}
+                                </button>
+                                <button type="submit" class="btn btn-warning" id="btn-save-print" {{disabledSubmitBtn}}>
+                                    <i class="fa fa-print"></i> {{_ "pos.custom.saveAndPrint"}}
+                                </button>
+                                <button type="submit" class="btn btn-success" id="btn-pay" {{disabledSubmitBtn}}>
+                                    <i class="fa fa-money"></i> {{_ "pos.custom.pay"}}
+                                </button>
+                                <button type="submit" class="btn btn-primary save-invoice" {{disabledSubmitBtn}}>
+                                    <i class="fa fa-floppy-o"></i> {{_ "form.btnSave"}}
+                                </button>
+                                <button type="reset" class="btn btn-default reset-button">
+                                    <i class="fa fa-refresh"></i> {{_ "form.btnReset"}}
+                                </button>
+                            {{/formFooter}}
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+        {{/autoForm}}
+    </div>
+
+    <div class="modal fade" id="imei" data-backdrop="static">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title"> IMEI </h4>
+                </div>
+                <div class="modal-body">
+                    <input type="text" class="form-control" id="input-imei" placeholder="Add IMEI">
+                    <br>
+                    <table class="table table-bordered">
+                        <thead>
+                        <tr>
+                            <th>No</th>
+                            <th>IMEI</th>
+                            <th style="width: 10%">Remove</th>
+                        </tr>
+                        </thead>
+                        <tbody class="custom">
+                        {{#each imeis}}
+                            <tr>
+                                <td>{{order}}</td>
+                                <td class="td-imei">{{code}}</td>
+                                <td>
+                                    <a class="btn btn-xs btn-danger btn-remove-imei">
+                                        <i class="fa fa-times"></i>
+                                    </a>
+                                </td>
+                            </tr>
+                        {{/each}}
+                        </tbody>
+
+                    </table>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+
+            </div>
+        </div>
+    </div>
 </template>
+
+
 
 <!--Update-->
 <template name="Pos_enterBillEdit">
